samples/_failures_safe/1761600279_0c393f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_905ebdee.c: In function ‘tokenize’:
./samples/SAFE/__tmp_905ebdee.c:166:42: error: expected ‘;’ at end of input
  166 |             tokens[token_count++] = token
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_905ebdee.c:166:13: error: expected declaration or statement at end of input
  166 |             tokens[token_count++] = token
      |             ^~~~~~
./samples/SAFE/__tmp_905ebdee.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_905ebdee.c:166:13: error: expected declaration or statement at end of input
